fix(applications): prereq form missing link and units, broken indexing, htmx version

--- a/static/common/css/globals_output.css
+++ b/static/common/css/globals_output.css
@@ -29,8 +29,6 @@
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
@@ -2421,9 +2419,6 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
-  .h-auto {
-    height: auto;
-  }
   .h-full {
     height: 100%;
   }
@@ -2433,26 +2428,11 @@
   .w-1\/2 {
     width: calc(1 / 2 * 100%);
   }
-  .w-1\/3 {
-    width: calc(1 / 3 * 100%);
-  }
   .w-1\/4 {
     width: calc(1 / 4 * 100%);
   }
   .w-1\/5 {
     width: calc(1 / 5 * 100%);
-  }
-  .w-1\/6 {
-    width: calc(1 / 6 * 100%);
-  }
-  .w-1\/8 {
-    width: calc(1 / 8 * 100%);
-  }
-  .w-1\/10 {
-    width: calc(1 / 10 * 100%);
-  }
-  .w-2\/5 {
-    width: calc(2 / 5 * 100%);
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
@@ -2468,24 +2448,6 @@
   }
   .w-52 {
     width: calc(var(--spacing) * 52);
-  }
-  .w-\[4\%\] {
-    width: 4%;
-  }
-  .w-\[6\%\] {
-    width: 6%;
-  }
-  .w-\[10\%\] {
-    width: 10%;
-  }
-  .w-\[12\%\] {
-    width: 12%;
-  }
-  .w-\[18\%\] {
-    width: 18%;
-  }
-  .w-\[34\%\] {
-    width: 34%;
   }
   .w-auto {
     width: auto;
@@ -2523,32 +2485,14 @@
   .max-w-xs {
     max-width: var(--container-xs);
   }
-  .min-w-\[150px\] {
-    min-width: 150px;
-  }
   .min-w-\[200px\] {
     min-width: 200px;
-  }
-  .min-w-\[500px\] {
-    min-width: 500px;
-  }
-  .min-w-\[1100px\] {
-    min-width: 1100px;
   }
   .min-w-\[1200px\] {
     min-width: 1200px;
   }
-  .min-w-\[1500px\] {
-    min-width: 1500px;
-  }
-  .min-w-\[2000px\] {
-    min-width: 2000px;
-  }
   .min-w-\[4000px\] {
     min-width: 4000px;
-  }
-  .min-w-\[4200px\] {
-    min-width: 4200px;
   }
   .flex-1 {
     flex: 1;
@@ -2627,9 +2571,6 @@
   }
   .justify-start {
     justify-content: flex-start;
-  }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -2747,12 +2688,6 @@
   .bg-base-200 {
     background-color: var(--color-base-200);
   }
-  .bg-base-200\/50 {
-    background-color: var(--color-base-200);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-base-200) 50%, transparent);
-    }
-  }
   .bg-base-300 {
     background-color: var(--color-base-300);
   }
@@ -2849,9 +2784,6 @@
   }
   .align-middle {
     vertical-align: middle;
-  }
-  .align-top {
-    vertical-align: top;
   }
   .font-mono {
     font-family: var(--font-mono);
@@ -3199,19 +3131,6 @@
     -webkit-user-select: all;
     user-select: all;
   }
-  .select-none {
-    -webkit-user-select: none;
-    user-select: none;
-  }
-  .\[swap\:course\] {
-    swap: course;
-  }
-  .\[swap\:course_id\] {
-    swap: course id;
-  }
-  .\[swap\:course_units\] {
-    swap: course units;
-  }
   .hover\:-translate-y-1 {
     &:hover {
       @media (hover: hover) {
@@ -3275,16 +3194,6 @@
   .md\:col-span-3 {
     @media (width >= 48rem) {
       grid-column: span 3 / span 3;
-    }
-  }
-  .md\:col-span-4 {
-    @media (width >= 48rem) {
-      grid-column: span 4 / span 4;
-    }
-  }
-  .md\:col-span-5 {
-    @media (width >= 48rem) {
-      grid-column: span 5 / span 5;
     }
   }
   .md\:w-64 {
